@@ -5,38 +5,38 @@ from functools import total_ordering
 @total_ordering
 class Event:
     """The class defining an event."""
-    LEFT = 0
-    CROSSING = 1
-    RIGHT = 2
-    HORIZONTAL = 3
-    VERTICAL = 4
-    BOTTOM = 5
-    TOP = 6
+    LEFT = 0   # BentleyOttmann, ShamosHoey
+    CROSSING = 1   # BentleyOttmann
+    RIGHT = 2   # BentleyOttmann, ShamosHoey
+    HORIZONTAL = 3   #  HorizontalVertical
+    VERTICAL = 4   #  HorizontalVertical
+    BOTTOM = 5   #  HorizontalVertical
+    TOP = 6   #  HorizontalVertical
 
-    def __init__(self, pt, event_type, *sequence):
-        self.pt = pt
+    def __init__(self, point, event_type, *sequence):
+        self.point = point
         self.type = event_type
-        if len(sequence) == 1:
-            self.segment = sequence[0]
-        elif len(sequence) == 2:
+        if self.type == Event.CROSSING:
             self.segment_above = sequence[0]
             self.segment_below = sequence[1]
+        else:
+            self.segment = sequence[0]
 
     def __str__(self):
-        return "Event({}, {})".format(self.pt, self.type)
+        return "Event({}, {})".format(self.point, self.type)
 
     def __eq__(self, other):
         """Comparison of events (event1 == event2)."""
-        return self.pt == other.pt
+        return self.point == other.point
 
     def __ne__(self, other):
         """Comparison of events (event1 != event2)."""
-        return self.pt != other.pt
+        return self.point != other.point
 
     def __lt__(self, other):
         """Comparison of events (event1 < event2)."""
-        return (self.pt.x, self.pt.y) < (other.pt.x, other.pt.y)
+        return (self.point.x, self.point.y) < (other.point.x, other.point.y)
 
     def __hash__(self):
         """Hashable events."""
-        return hash((self.pt.x, self.pt.y, self.type))   # hash based on tuple
+        return hash((self.point.x, self.point.y, self.type))   # hash based on tuple
